# StructuraX

./: .gitmodules  CMakeLists.txt  README.md  main.py  requirements.txt  setup.py
structurax/: pyfeaplusplus.cpp
structurax/core/: fea.py  mesh.py
structurax/core/structure/: base.py
structurax/input/: base.py
structurax/output/: base.py
tests/: test_materials.py
